--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,16 @@
 [package]
-name = "sodax-backend-analizer"
+name = "sodax_backend_analizer"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dotenv = "0.15.0"
+serde = "1.0.188"
+
+[dependencies.mongodb]
+version = "3.2.4"
+features = ["sync"]
+
+[[bin]]
+name = "get_collections"
+path = "src/bin/get_collections.rs"
