--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,15 @@ edition = "2024"
 
 [dependencies]
 dotenv = "0.15.0"
+futures = "0.3.31"
 serde = "1.0.188"
+tokio = {version = "1.47.0", features = ["full"]}
 
 [dependencies.mongodb]
 version = "3.2.4"
-features = ["sync"]
+
+[dev-dependencies]
+tokio = {version = "1.47.0", features = ["full", "test-util"]}
 
 [dev-dependencies.cargo-husky]
 version = "1.5.0"
