--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 alloy = "1.0.23"
 dotenv = "0.15.0"
 futures = "0.3.31"
+primitive-types = "0.13.1"
 serde = "1.0.188"
 tokio = {version = "1.47.0", features = ["full"]}
 
